--- a/.env.example
+++ b/.env.example
@@ -46,13 +46,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=aj.anunciado@gmail.com
+MAIL_PASSWORD=ofxafszqqvstgrmo
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="aj.anunciado@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -69,3 +69,4 @@ FIREBASE_CREDENTIALS=config/firebase_credentials.json
 
 FIREBASE_STORAGE_BUCKET=gs://dialecto-c14c1.appspot.com
 
+FIREBASE_DATABASE_URL=https://dialecto-c14c1-default-rtdb.asia-southeast1.firebasedatabase.app/
